--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <h1>Hello, I'm Benoît 😁</h1>
+      <h1>Hello, I'm Benoît ! 😁</h1>
       <img class="img-circle" src="images/photo_benoit_kitt.png" alt="photo Benoît Mahé" width="120px">
       <p>
         I like play vidéo games 🎮 !
